# CaLiGraph

./: .gitignore  ESWC2023-NASTyLinker.ipynb  LICENSE  Pipfile  README.md  Readme.md  WWW21-Information_Extraction_from_Co-Occurring_Similar_Entities.ipynb  __main__.py  config.yaml  environment.yaml  evaluate_entity_disambiguation.py  evaluate_entity_linking.py  evaluate_mention_detection.py  evaluate_se_tagging.py  evaluate_vector_prediction.py  mailer.py  parse_listtext.py  pyproject.toml  relation_test.py  run_data_extraction.py  run_vector_prediction.py  tune_entity_disambiguation.py  tuning_entity_disambiguation.py  type_lexicalisations.py  util.py  utils.py
caligraph/: base.py  graph.py
caligraph/category/: base.py  evaluation.py  graph.py  nlp.py  store.py  util.py
caligraph/dbpedia/: heuristics.py  store.py  util.py
caligraph/list/: store.py  util.py
caligraph/util/: base_graph.py  dataframe.py  nlp.py  rdf.py
caligraph/wikidata/: store.py
config/: biencoder_list.yaml  biencoder_nilk.yaml  paramconfig_buc_nilk10.yaml  paramconfig_edin_nilk10.yaml  paramconfig_edin_nilk50.yaml  paramconfig_nl_nilk10.yaml  paramconfig_nl_nilk5.yaml  paramconfig_nl_nilk50.yaml
data/: cataxioms_labels.csv  goldstandard_mention-detection.csv  maintenance_categories.ttl.bz2
data/cache/: dbpedia-type-lexicalisations_v1.p.bz2
entity_linking/: __init__.py  entity_prediction.py  evaluation.py  mention_detection.py  mention_entity_matching.py  se_tagging.py  util.py  utils.py  vp_utils.py
entity_linking/config/: biencoder.yaml  biencoder_list.yaml  biencoder_nilk.yaml  crossencoder.yaml  crossencoder_list.yaml  crossencoder_nilk.yaml  paramconfig_edin_nilk5.yaml  paramconfig_nl_nilk5.yaml
entity_linking/data/: datasets.py  entity_prediction.py  linking.py  listing.py  mention_detection.py  mention_entity_matching.py  multi_entity_prediction.py  prepare.py  util.py
entity_linking/entity_disambiguation/: __init__.py  data.py  evaluation.py
entity_linking/evaluation/: __init__.py  entity_prediction.py  mention_detection.py  mention_entity_matching.py
entity_linking/legacy/: baseline.py  eval.py  loss.py  preprocessing.py
entity_linking/matching/: __init__.py  average_clustering.py  biencoder.py  bufusion.py  crossencoder.py  graph.py  greedy_clustering.py  io.py  lexical.py  matcher.py  nastylinker.py  tdfusion.py  transformer_util.py  util.py
impl/: graph.py
nif/: parse.py
www/: contact.html  default.css  index.html  resources.html
(+170 files in other folders)
