[tool.poetry]
name = "caligraph"
version = "2.2.0"
description = ""
authors = ["Nicolas Heist <nico@informatik.uni-mannheim.de>"]

[tool.poetry.dependencies]
python = "^3.10"
inflection = "*"
pandas = "*"
wikitextparser = "*"
lxml = "*"
spacy = "^3.2.0"
spacy-lookups-data = "*"
tables = "*"
pyyaml = "*"
networkx = "*"
nltk = "*"
pynif = "*"
tqdm = "*"
polyleven = "*"
unidecode = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
transformers = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
tensorboard = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
