[tool.poetry]
name = "caligraph"
version = "2.2.0"
description = ""
authors = ["Nicolas Heist <nico@informatik.uni-mannheim.de>"]

[tool.poetry.dependencies]
python = "^3.10"
inflection = "*"
pandas = "*"
wikitextparser = "*"
lxml = "*"
spacy = "~3.2"
spacy-lookups-data = "*"
tables = "*"
pyyaml = "*"
networkx = "*"
nltk = "*"
pynif = "*"
tqdm = "*"
polyleven = "*"
unidecode = "*"
transformers = "*"
torch = "*"
poethepoet = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
tensorboard = "*"
jupyter = "*"

[tool.poe.tasks]
install-ltt = "python3 -m pip install light-the-torch"
run-ltt = "python3 -m light_the_torch install --upgrade torch torchaudio torchvision"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
